folders lowercase. header aligning & colors corrected accoridng to styleguide

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -4,7 +4,7 @@
 
 /* General */
 body {
-    font-family: avenirnextregular, avenir, Arial, Helvetica, sans-serif;
+    font-family: avenirnext, avenir, Arial, Helvetica, sans-serif;
     margin: 0;
 
     header {
