--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,16 +1,8 @@
 @mixin font {
     @font-face {
-        font-family: "avenirnextregular";
+        font-family: "avenirnext";
         src: url(../../assets/fonts/AvenirNextLTPro-Regular.otf) format ("opentype");
-    }
-
-    @font-face {
-        font-family: "avenir-next-bold";
         src: url(../../assets/fonts/AvenirNextLTPro-Bold.otf) format ("opentype");
-    }
-
-    @font-face {
-        font-family: "avenir-next-demi";
         src: url(../../assets/fonts/AvenirNextLTPro-Demi.otf) format ("opentype");
     }
 }
