--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,6 +1,6 @@
 /* General */
 body {
-  font-family: avenirnextregular, avenir, Arial, Helvetica, sans-serif;
+  font-family: avenirnext, avenir, Arial, Helvetica, sans-serif;
   margin: 0;
 }
 body header {
